# flake8-sleep

./: .pre-commit-config.yaml  LICENSE  README.md  flake8_sleep.py  setup.cfg
tests/: flake8_sleep_test.py
