[metadata]
name = flake8_sleep
version = 0.0.1
description = flake8 plugin which checks that there is no use of sleep in the code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nathanmalnoury/flake8-sleep
author = Nathan Malnoury
author_email = nathan.malnoury@experquiz.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = flake8_sleep
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.6.1

[options.entry_points]
flake8.extension =
    SLP=flake8_sleep:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
